# pixiv-mcp-server

./: .gitignore  DXT_README.md  DXT_README_CN.md  DXT_TOKEN_配置指南.md  INSTALLATION_GUIDE.md  README.md  TOKEN_REFRESH_GUIDE.md  get_token.py  manifest.json  package.json  pixiv_mcp_server.py  pyproject.toml  requirements.txt  test_token_refresh.py  validate_dxt.py  安装指南.md  快速开始.md
pixiv_mcp_server/: __main__.py  downloader.py  state.py  tools.py  utils.py
pixiv_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: main.py
